# liquid-neural-networks

./: .gitignore  APPLICATIONS.org  COMPREHENSIVE.org  LICENSE  Makefile  README.org  SETUP.org  deps.edn  main.py  pyproject.toml  requirements-minimal.txt  requirements-research.txt
.beads/: interactions.jsonl
.github/workflows/: ci.yml
scripts/: create_structure.sh  dev_env_setup.sh  freebsd_setup.sh
src/clj/liquid_neural_networks/: core.clj
src/clojure/liquid_neural_networks/: applications.clj  core.clj
src/liquid_neural_networks/: __init__.py  core.py
src/python/: lnn_research.py  lnn_visualization.py
tests/: test_core.py
