# [[file:README.org::*Python Project Configuration (pyproject.toml)][Python Project Configuration (pyproject.toml):1]]
[project]
name = "liquid-neural-networks"
version = "0.1.0"
description = "Continuous-time neural architectures inspired by biological neurons"
readme = "README.org"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "ruff>=0.1.0",
]
research = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "diffrax>=0.5.0",
    "optax>=0.1.7",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "networkx>=3.1",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
]
# Python Project Configuration (pyproject.toml):1 ends here
